任務二-Priching完成70%
微調a連結與製作6-qa區(JS還不會，要再練習)

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     </div>
                     <div class="content_list-card-body d-flex jcsb aic">
                         <p>#聊天</p>
-                        <span class="material-icons">share</span>
+                        <a href="#"><span class="material-icons">share</span></a>
                     </div>
                 </li>
                 <li class="content_list-card mb-24 mb-s-12">
@@ -242,7 +242,7 @@
                     </div>
                     <div class="content_list-card-body d-flex jcsb aic">
                         <p>#影像辨識</p>
-                        <span class="material-icons">share</span>
+                        <a href="#"><span class="material-icons">share</span></a>
                     </div>
                 </li>
                 <li class="content_list-card mb-24 mb-s-12">
@@ -259,7 +259,7 @@
                     </div>
                     <div class="content_list-card-body d-flex jcsb aic">
                         <p>#翻譯</p>
-                        <span class="material-icons">share</span>
+                        <a href="#"><span class="material-icons">share</span></a>
                     </div>
                 </li>
                 <li class="content_list-card mb-s-12">
@@ -276,7 +276,7 @@
                     </div>
                     <div class="content_list-card-body d-flex jcsb aic">
                         <p>#行銷</p>
-                        <span class="material-icons">share</span>
+                        <a href="#"><span class="material-icons">share</span></a>
                     </div>
                 </li>
                 <li class="content_list-card mb-s-12">
@@ -294,7 +294,7 @@
                     </div>
                     <div class="content_list-card-body d-flex jcsb aic">
                         <p>#客服</p>
-                        <span class="material-icons">share</span>
+                        <a href="#"><span class="material-icons">share</span></a>
                     </div>
                 </li>
                 <li class="content_list-card">
@@ -311,7 +311,7 @@
                     </div>
                     <div class="content_list-card-body d-flex jcsb aic">
                         <p>#生產力</p>
-                        <span class="material-icons">share</span>
+                        <a href="#"><span class="material-icons">share</span></a>
                     </div>
                 </li>
             </ul>
