--- a/priching.html
+++ b/priching.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>任務二-Priching</title>
+    <title>AI工具王-Priching</title>
     <link rel="stylesheet" href="./style/SCSS/all.css">
     <script
   src="https://code.jquery.com/jquery-3.7.0.min.js"
@@ -306,33 +306,89 @@
     </div>
     <div class="container">
         <div class="qa d-flex jcsb fxdc-s">
-            <h5 class="fz-32 fz-s-20">常見問題</h5>
+            <h5 class="fz-32 fz-s-20 pb-s-24">常見問題</h5>
             <ul class="qa-list">
                 <li class="qa-list-body">
-                    <a class="d-flex" href="#">
+                    <a class="qa-list-box d-flex" href="#">
                         <div class="qa-icon pr-20">
-                            <span class="material-icons fz-24">add</span>
-                            <span class="material-icons fz-24">remove</span>
+                            <span class="material-icons qa-icon-add fz-24">add</span>
+                            <span class="material-icons qa-icon-remove fz-24 d-none">remove</span>
                         </div>
                         <div class="qa-box">
                             <p class="fz-20">如何選擇適合的AI模型？</p>
-                            <p class="fw-regular fz-16 lh1_5">content</p>
+                            <p class="qa-box-showme fw-regular fz-16 lh1_5 d-none">content</p>
                         </div>
                     </a>
                 </li>
                 <li class="qa-list-body">
-                    <a class="d-flex" href="#">
+                    <a class="qa-list-box d-flex" href="#">
                         <div class="qa-icon pr-20">
-                            <span class="material-icons fz-24">add</span>
-                            <span class="material-icons fz-24">remove</span>
+                            <span class="material-icons qa-icon-add fz-24">add</span>
+                            <span class="material-icons qa-icon-remove fz-24 d-none">remove</span>
                         </div>
                         <div class="qa-box">
-                            <p class="fz-20">如何選擇適合的AI模型？</p>
-                            <p class="fw-regular fz-16 lh1_5">content</p>
+                            <p class="fz-20">租用模型的費用是如何計算的？</p>
+                            <p class="qa-box-showme fw-regular fz-16 lh1_5 d-none">content</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="qa-list-body">
+                    <a class="qa-list-box d-flex" href="#">
+                        <div class="qa-icon pr-20">
+                            <span class="material-icons qa-icon-add fz-24">add</span>
+                            <span class="material-icons qa-icon-remove fz-24 d-none">remove</span>
+                        </div>
+                        <div class="qa-box">
+                            <p class="fz-20">如何進行付款？</p>
+                            <p class="qa-box-showme fw-regular fz-16 lh1_5 d-none">content</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="qa-list-body">
+                    <a class="qa-list-box d-flex" href="#">
+                        <div class="qa-icon pr-20">
+                            <span class="material-icons qa-icon-add fz-24">add</span>
+                            <span class="material-icons qa-icon-remove fz-24 d-none">remove</span>
+                        </div>
+                        <div class="qa-box">
+                            <p class="fz-20">租用模型的期限是多久？</p>
+                            <p class="qa-box-showme fw-regular fz-16 lh1_5 d-none">content</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="qa-list-body">
+                    <a class="qa-list-box d-flex" href="#">
+                        <div class="qa-icon pr-20">
+                            <span class="material-icons qa-icon-add fz-24">add</span>
+                            <span class="material-icons qa-icon-remove fz-24 d-none">remove</span>
+                        </div>
+                        <div class="qa-box">
+                            <p class="fz-20">如果在使用過程中遇到問題，應該怎麼處理？</p>
+                            <p class="qa-box-showme fw-regular fz-16 lh1_5 d-none">content</p>
                         </div>
                     </a>
                 </li>
             </ul>
+        </div>
+        <div class="use">
+            <!--<div class="use-top">
+                <h4 class="fz-48 fz-s-32 fw-block pb-40">現在就來建立屬於你的服務吧</h4>
+                <a class="use-top-btn fz-20 fw-block" href="#">開始使用<span class="material-icons fz-24 pl-12">call_made</span>
+                </a>
+            </div>-->
+            <div class="use-bottom d-flex jcsb fxdcr-s">
+                <div class="use-bottom-sideL">
+                    <a href="#">
+                        <h3 class="fz-80 fz-s-48 fw-block pb-8">首頁</h3>
+                    </a>
+                    <a href="#">
+                        <h3 class="fz-80 fz-s-48 fw-block">定價</h3>
+                    </a>
+                </div>
+                <div class="use-bottom-sideR pb-s-40">
+                    <a href="#"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/logo.png" alt="logo"></a>
+                </div>
+            </div>
         </div>
         <div class="footer fz-16 lh1_5 fw-bold d-flex jcsb aic aifs-s">
             <div class="footer-sideL d-flex jcsb aic aifs-s fxdc-s">
