--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>任務二-Home</title>
+    <title>AI工具王-Home</title>
     <link rel="stylesheet" href="./style/SCSS/all.css"/>
     <script
   src="https://code.jquery.com/jquery-3.7.0.min.js"
