AI工具王 完成
耶！

--- a/priching.html
+++ b/priching.html
@@ -16,11 +16,11 @@
     <div class="container">
         <div class="header d-flex jcsb aic">
             <h1 class="logo">
-                <a href="#"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/logo.png" alt="LOGO"></img></a>
+                <a href="https://ocket609.github.io/2023-exp-camp-task-two/index.html"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/logo.png" alt="LOGO"></img></a>
             </h1>
             <div class="nav">
-                <a class="lh1_5 pr-20" href="#">首頁</a>
-                <a class="lh1_5" href="#">定價</a>
+                <a class="lh1_5 pr-20" href="https://ocket609.github.io/2023-exp-camp-task-two/index.html">首頁</a>
+                <a class="lh1_5" href="https://ocket609.github.io/2023-exp-camp-task-two/priching.html">定價</a>
             </div>
             <div class="nav-icon">
                 <a href="">
@@ -378,15 +378,15 @@
             </div>-->
             <div class="use-bottom d-flex jcsb fxdcr-s">
                 <div class="use-bottom-sideL">
-                    <a href="#">
+                    <a href="https://ocket609.github.io/2023-exp-camp-task-two/index.html">
                         <h3 class="fz-80 fz-s-48 fw-block pb-8">首頁</h3>
                     </a>
-                    <a href="#">
+                    <a href="https://ocket609.github.io/2023-exp-camp-task-two/priching.html">
                         <h3 class="fz-80 fz-s-48 fw-block">定價</h3>
                     </a>
                 </div>
                 <div class="use-bottom-sideR pb-s-40">
-                    <a href="#"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/logo.png" alt="logo"></a>
+                    <a href="https://ocket609.github.io/2023-exp-camp-task-two/index.html"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/logo.png" alt="logo"></a>
                 </div>
             </div>
         </div>
