--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             </div>
         </div>
         <div class="sever fw-block">
-            <div class="sever-title d-flex jcsb fxdc-s">
-                <h5 class="fz-32 fz-s-20 pb-s-24">我們的服務</h5>
+            <div class="sever-title d-flex jcsb fxdc-m">
+                <h5 class="fz-32 fz-s-20 pb-m-24">我們的服務</h5>
                 <h4 class="fz-48 fz-s-32">我們相信透過 AI 技術，
       包括圖像識別、自然語言處理和機器翻譯等，讓您更快、更準確地做出決策。</h4>
             </div>
-            <ul class="sever-list d-flex jcsb fxww-s">
+            <ul class="sever-list d-flex jcsb fxdc-m aic-m">
                 <li class="sever-listCard">
                     <span class="material-icons fz-80 pb-20">flash_on</span>
                     <h5 class="fz-32 pb-20">快速</h5>
@@ -86,7 +86,7 @@
                 <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise12.png" alt="logo">
                 <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/enterprise7.png" alt="logo">
             </div>
-            <ul class="partner-message d-flex jcsb fxww-s">
+            <ul class="partner-message d-flex jcsb fxdc-m aic-m">
                 <li class="partner-messageCard">
                     <span class="material-icons fz-16">star</span>
                     <span class="material-icons fz-16">star</span>
@@ -137,12 +137,12 @@
     </div>
     <div class="content">
         <div class="container">
-            <h3 class="fz-80 fz-s-32 fw-block pb-80 pb-s-32">這些超酷的應用，都來自 AI工具王</h3>
+            <h3 class="fz-80 fz-m-48 fz-s-32 fw-block pb-80 pb-s-32">這些超酷的應用，都來自 AI工具王</h3>
             <div class="search d-flex aic mb-24 mb-s-16">
                 <span class="material-icons fz-24 saerchRgb pt-12">search</span>
                 <input class="search-tool fz-24 lh1_5 fw-regular" type="search" name="searchNav" id="searchNav" placeholder="輸入關鍵字搜尋">
             </div>
-            <div class="selectAd d-flex jcsb fxww-s aic">
+            <div class="selectAd d-flex jcsb fxww-m aic">
                 <div class="selectAd-itemsAll selectRgb fz-16 lh1_5">
                     <button class="selectAd-itemsAll-btn d-flex aic">
                         <span class="itemsAll-btn-title pr-12">篩選</span>
@@ -216,8 +216,8 @@
                     </select>
                 </div> -->
             </div>
-            <ul class="content_list d-flex jcsb fxww">
-                <li class="content_list-card mb-24 mb-s-12">
+            <ul class="content_list d-flex jcsb fxww fxwnw-m fxdc-m aic-m">
+                <li class="content_list-card mb-24 mb-m-18 mb-s-12">
                     <div class="content_list-card-img">
                         <a href=""><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/tool1.png" alt="主題"></a>
                     </div>
@@ -234,7 +234,7 @@
                         <a href="#"><span class="material-icons">share</span></a>
                     </div>
                 </li>
-                <li class="content_list-card mb-24 mb-s-12">
+                <li class="content_list-card mb-24 mb-m-18 mb-s-12">
                     <div class="content_list-card-img">
                         <a href=""><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/tool2.png" alt="主題"></a>
                     </div>
@@ -251,7 +251,7 @@
                         <a href="#"><span class="material-icons">share</span></a>
                     </div>
                 </li>
-                <li class="content_list-card mb-24 mb-s-12">
+                <li class="content_list-card mb-24 mb-m-18 mb-s-12">
                     <div class="content_list-card-img">
                         <a href=""><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/tool3.png" alt="主題"></a>
                     </div>
@@ -268,7 +268,7 @@
                         <a href="#"><span class="material-icons">share</span></a>
                     </div>
                 </li>
-                <li class="content_list-card mb-s-12">
+                <li class="content_list-card mb-m-18 mb-s-12">
                     <div class="content_list-card-img">
                         <a href=""><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/tool4.png" alt="主題"></a>
                     </div>
@@ -285,7 +285,7 @@
                         <a href="#"><span class="material-icons">share</span></a>
                     </div>
                 </li>
-                <li class="content_list-card mb-s-12">
+                <li class="content_list-card mb-m-18 mb-s-12">
                     <div class="content_list-card-img">
                         <a href=""><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/tool5.png" alt="主題"></a>
                     </div>
