--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             </h2>
             <a class="btn-start" href="#">開始使用</a>
             <div class="effect d-flex jcfe jcc-s">
-                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
-                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
-                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
+                <img class="move-1" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
+                <img class="move-2" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
+                <img class="move-3" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
             </div>
         </div>
         <div class="sever fw-block">
