--- a/priching.html
+++ b/priching.html
@@ -37,9 +37,9 @@
             </div>
             <!--不包div僅以h4給class，width:50%無法作動-->
             <div class="effect d-flex jcc-s">
-                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
-                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
-                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
+                <img class="move-1" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
+                <img class="move-2" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
+                <img class="move-3" src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/2023web-camp/deco.png" alt="">
             </div>
         </div>
         <div class="price">
